--- a/src/html/privacy_policy.html
+++ b/src/html/privacy_policy.html
@@ -33,7 +33,7 @@
     </style> -->
   </head>
   <body
-    class="relative cursor-default overflow-x-hidden overflow-y-auto text-gray-900"
+    class="relative cursor-default overflow-y-auto overflow-x-hidden text-gray-900"
   >
     <div
       class="absolute inset-0 bg-orange-100 opacity-100 transition-opacity duration-300 dark:opacity-0"
@@ -49,7 +49,7 @@
 
     <!-- 🔥 header 🔥 -->
     <nav
-      class="nav-shadow bg-opacity-95 fixed top-0 z-50 w-full bg-orange-800 p-4 text-white backdrop-blur-md"
+      class="nav-shadow fixed top-0 z-50 w-full bg-orange-800 bg-opacity-95 p-4 text-white backdrop-blur-md"
     >
       <div class="container mx-auto">
         <!-- desktop view -->
@@ -62,7 +62,7 @@
                 class="h-14 w-14 rounded-full ring-2 ring-orange-400 ring-offset-2 ring-offset-orange-800 transition-all duration-500 group-hover:scale-110 group-hover:ring-4 group-hover:ring-yellow-400"
               />
               <div
-                class="absolute -top-1 -right-1 h-4 w-4 animate-pulse rounded-full border-2 border-white bg-green-500"
+                class="absolute -right-1 -top-1 h-4 w-4 animate-pulse rounded-full border-2 border-white bg-green-500"
               ></div>
             </div>
             <div
@@ -70,13 +70,13 @@
               class="redirect-to-dashboard transform rounded-2xl bg-gradient-to-r from-orange-600 via-orange-500 to-yellow-500 px-8 py-3 shadow-lg transition-all duration-300 hover:scale-105 hover:shadow-xl"
             >
               <h1
-                class="text-3xl font-black tracking-wide text-white uppercase drop-shadow-lg"
+                class="text-3xl font-black uppercase tracking-wide text-white drop-shadow-lg"
               >
                 <!-- 🔑 CLIENT -->
                 Fitworx Gym
               </h1>
               <span
-                class="text-xs font-semibold tracking-widest text-orange-100 uppercase"
+                class="text-xs font-semibold uppercase tracking-widest text-orange-100"
               >
                 <!-- 🔑 CLIENT (update client motto) -->
                 Push Your Limits
@@ -96,7 +96,7 @@
               >
                 <!-- sun icon -->
                 <svg
-                  class="absolute top-1/2 left-1/2 hidden h-4 w-4 -translate-x-1/2 -translate-y-1/2 text-amber-500 dark:block"
+                  class="absolute left-1/2 top-1/2 hidden h-4 w-4 -translate-x-1/2 -translate-y-1/2 text-amber-500 dark:block"
                   fill="currentColor"
                   viewBox="0 0 20 20"
                 >
@@ -106,7 +106,7 @@
                 </svg>
                 <!-- moon icon -->
                 <svg
-                  class="absolute top-1/2 left-1/2 block h-4 w-4 -translate-x-1/2 -translate-y-1/2 text-slate-600 dark:hidden"
+                  class="absolute left-1/2 top-1/2 block h-4 w-4 -translate-x-1/2 -translate-y-1/2 text-slate-600 dark:hidden"
                   fill="currentColor"
                   viewBox="0 0 20 20"
                 >
@@ -170,7 +170,7 @@
               <!-- admin dropdown -->
               <div
                 id="dropdown-menu"
-                class="ring-opacity-5 absolute right-0 z-50 mt-3 hidden w-48 overflow-hidden rounded-xl border border-gray-200 bg-white shadow-2xl ring-1 ring-black focus:outline-none"
+                class="absolute right-0 z-50 mt-3 hidden w-48 overflow-hidden rounded-xl border border-gray-200 bg-white shadow-2xl ring-1 ring-black ring-opacity-5 focus:outline-none"
               >
                 <div class="gap-2">
                   <div
@@ -213,20 +213,20 @@
                 class="h-12 w-12 rounded-full border-2 border-orange-400 shadow-lg"
               />
               <div
-                class="absolute -top-1 -right-1 h-3 w-3 animate-pulse rounded-full border border-white bg-green-400"
+                class="absolute -right-1 -top-1 h-3 w-3 animate-pulse rounded-full border border-white bg-green-400"
               ></div>
             </div>
             <div
               class="rounded-lg bg-gradient-to-r from-orange-600 to-yellow-500 px-4 py-2 shadow-md"
             >
               <h1
-                class="text-xl font-black tracking-wider text-white uppercase drop-shadow-md"
+                class="text-xl font-black uppercase tracking-wider text-white drop-shadow-md"
               >
                 <!-- 🔑 CLIENT -->
                 Fitworx Gym
               </h1>
               <span
-                class="text-xs font-medium tracking-widest text-orange-100 uppercase"
+                class="text-xs font-medium uppercase tracking-widest text-orange-100"
               >
                 <!-- 🔑 CLIENT -->
                 Push Your Limits
@@ -275,10 +275,10 @@
     </nav>
 
     <!-- 🔥 main 🔥 -->
-    <div class="relative mx-auto max-w-5xl px-4 pt-32 pb-20">
+    <div class="relative mx-auto max-w-5xl px-4 pb-20 pt-32">
       <div class="overflow-hidden rounded-2xl bg-white shadow-2xl">
         <!-- title -->
-        <div class="relative bg-orange-900 dark:bg-dark-800 px-6 py-8">
+        <div class="dark:bg-dark-800 relative bg-orange-900 px-6 py-8">
           <div
             class="pattern-grid-lg absolute inset-0 bg-black opacity-5"
           ></div>
@@ -323,7 +323,7 @@
             <div class="space-y-4 text-gray-700">
               <div class="group flex items-start">
                 <i
-                  class="fas fa-check-circle mt-1.5 mr-3 text-orange-500 transition-transform group-hover:scale-110"
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span
                   >Basic Personal Information: We collect essential personal
@@ -341,7 +341,7 @@
               </div> -->
               <div class="group flex items-start">
                 <i
-                  class="fas fa-check-circle mt-1.5 mr-3 text-orange-500 transition-transform group-hover:scale-110"
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span
                   >Student Verification: Student customers are required to
@@ -350,7 +350,7 @@
               </div>
               <div class="group flex items-start">
                 <i
-                  class="fas fa-check-circle mt-1.5 mr-3 text-orange-500 transition-transform group-hover:scale-110"
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span
                   >Facility Usage: We collect participants personal information
@@ -373,7 +373,7 @@
             <div class="space-y-4 text-gray-700">
               <div class="group flex items-start">
                 <i
-                  class="fas fa-check-circle mt-1.5 mr-3 text-orange-500 transition-transform group-hover:scale-110"
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span
                   >To manage customer's gym daily or monthly pass and track
@@ -382,7 +382,7 @@
               </div>
               <div class="group flex items-start">
                 <i
-                  class="fas fa-check-circle mt-1.5 mr-3 text-orange-500 transition-transform group-hover:scale-110"
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span
                   >To handle facility reservations and prevent booking
@@ -391,7 +391,7 @@
               </div>
               <div class="group flex items-start">
                 <i
-                  class="fas fa-check-circle mt-1.5 mr-3 text-orange-500 transition-transform group-hover:scale-110"
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span
                   >To process payments and monitor accurate financial and
@@ -400,7 +400,7 @@
               </div>
               <div class="group flex items-start">
                 <i
-                  class="fas fa-check-circle mt-1.5 mr-3 text-orange-500 transition-transform group-hover:scale-110"
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span
                   >To communicate with customers for facility rescheduling or
@@ -422,7 +422,7 @@
             <div class="space-y-4 text-gray-700">
               <div class="group flex items-start">
                 <i
-                  class="fas fa-check-circle mt-1.5 mr-3 text-orange-500 transition-transform group-hover:scale-110"
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span
                   >Information is shared only with the gym staff for operational
@@ -431,7 +431,7 @@
               </div>
               <div class="group flex items-start">
                 <i
-                  class="fas fa-check-circle mt-1.5 mr-3 text-orange-500 transition-transform group-hover:scale-110"
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span
                   >Freelance personal trainers receive only necessary
@@ -440,7 +440,7 @@
               </div>
               <div class="group flex items-start">
                 <i
-                  class="fas fa-check-circle mt-1.5 mr-3 text-orange-500 transition-transform group-hover:scale-110"
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span
                   >We DO NOT share your information for marketing purposes
@@ -462,7 +462,7 @@
             <div class="space-y-4 text-gray-700">
               <div class="group flex items-start">
                 <i
-                  class="fas fa-check-circle mt-1.5 mr-3 text-orange-500 transition-transform group-hover:scale-110"
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span
                   >We exercise strict control over both physical and electronic
@@ -549,7 +549,7 @@
                 <!-- 🔑 CLIENT -->
                 <h3 class="text-xl font-bold">Fitworx Gym</h3>
               </div>
-              <p class="pr-4 pb-4 leading-relaxed text-gray-400">
+              <p class="pb-4 pr-4 leading-relaxed text-gray-400">
                 Transform your fitness journey with our modern facilities and
                 expert guidance.
               </p>
@@ -742,7 +742,7 @@
     <!-- success dialog modal -->
     <div
       id="successModal"
-      class="modal bg-opacity-70 fixed inset-0 z-50 flex hidden items-center justify-center bg-black"
+      class="modal fixed inset-0 z-50 flex hidden items-center justify-center bg-black bg-opacity-70"
     >
       <div
         class="rounded-lg border-2 border-green-500 bg-zinc-900 p-6 text-center shadow-xl"
@@ -766,11 +766,11 @@
         </div>
         <h3
           id="success-title"
-          class="text-xl font-bold text-white uppercase"
+          class="text-xl font-bold uppercase text-white"
         ></h3>
         <p
           id="success-message"
-          class="mt-2 text-sm tracking-wider text-gray-400 uppercase"
+          class="mt-2 text-sm uppercase tracking-wider text-gray-400"
         ></p>
       </div>
     </div>
@@ -778,7 +778,7 @@
     <!-- admin login modal -->
     <div
       id="adminLoginModal"
-      class="modal bg-opacity-70 fixed inset-0 z-50 flex hidden items-center justify-center bg-black"
+      class="modal fixed inset-0 z-50 flex hidden items-center justify-center bg-black bg-opacity-70"
     >
       <!-- content -->
       <div
@@ -807,11 +807,11 @@
               <path d="M16 16v4" />
             </svg>
           </div>
-          <h2 class="text-2xl font-bold text-white uppercase">
+          <h2 class="text-2xl font-bold uppercase text-white">
             <!-- 🔑 CLIENT -->
             staff only
           </h2>
-          <p class="mt-1 text-sm tracking-wider text-gray-400 uppercase">
+          <p class="mt-1 text-sm uppercase tracking-wider text-gray-400">
             <!-- 🔑 CLIENT -->
             Power up your workflow
           </p>
@@ -842,7 +842,7 @@
             <input
               type="text"
               id="admin-username"
-              class="w-full rounded-lg border-2 border-zinc-700 bg-zinc-800 py-3 pr-4 pl-10 text-white placeholder-gray-500 transition-colors focus:border-orange-500 focus:ring-2 focus:ring-orange-500/20 focus:outline-none"
+              class="w-full rounded-lg border-2 border-zinc-700 bg-zinc-800 py-3 pl-10 pr-4 text-white placeholder-gray-500 transition-colors focus:border-orange-500 focus:outline-none focus:ring-2 focus:ring-orange-500/20"
               placeholder="User ID"
             />
           </div>
@@ -869,7 +869,7 @@
             <input
               type="password"
               id="admin-password"
-              class="w-full rounded-lg border-2 border-zinc-700 bg-zinc-800 py-3 pr-4 pl-10 text-white placeholder-gray-500 transition-colors focus:border-orange-500 focus:ring-2 focus:ring-orange-500/20 focus:outline-none"
+              class="w-full rounded-lg border-2 border-zinc-700 bg-zinc-800 py-3 pl-10 pr-4 text-white placeholder-gray-500 transition-colors focus:border-orange-500 focus:outline-none focus:ring-2 focus:ring-orange-500/20"
               placeholder="Password"
             />
           </div>
@@ -899,7 +899,7 @@
         <div class="mt-6 flex gap-3">
           <button
             id="cancelBtn"
-            class="flex flex-1 items-center justify-center gap-2 rounded-lg border-2 border-zinc-700 bg-zinc-800 px-4 py-3 text-white uppercase transition-colors duration-200 hover:bg-zinc-700"
+            class="flex flex-1 items-center justify-center gap-2 rounded-lg border-2 border-zinc-700 bg-zinc-800 px-4 py-3 uppercase text-white transition-colors duration-200 hover:bg-zinc-700"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -919,7 +919,7 @@
           </button>
           <button
             id="loginBtn"
-            class="flex flex-1 items-center justify-center gap-2 rounded-lg bg-orange-500 px-4 py-3 font-bold text-white uppercase transition-colors duration-200 hover:bg-orange-600"
+            class="flex flex-1 items-center justify-center gap-2 rounded-lg bg-orange-500 px-4 py-3 font-bold uppercase text-white transition-colors duration-200 hover:bg-orange-600"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
