dynamic admin modal

--- a/src/html/admin/dashboard.html
+++ b/src/html/admin/dashboard.html
@@ -1643,8 +1643,8 @@
     </div>
 
     <!-- 🔥 dynamic modal 🔥 -->
-    <div id="test"></div>
-    <script src="/src/js/test.js"></script>
+    <div id="admin_modal"></div>
+    <script type="module" src="/src/js/admin_modal.js"></script>
 
     <!-- main js -->
     <script type="module" src="/src/js/admin_main.js"></script>
