--- a/index.html
+++ b/index.html
@@ -3284,5 +3284,6 @@
     <script type="module" src="/src/js/_global.js"></script>
     <script type="module" src="/src/js/modal.js"></script>
     <!-- add new js here 👆 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.2/html2pdf.bundle.min.js"></script>
   </body>
 </html>
